--- a/src/main/resources/templates/ListProduit.html
+++ b/src/main/resources/templates/ListProduit.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <link rel="stylesheet" type="text/css"
       href="webjars/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
 <head>
     <meta charset="utf-8">
     <title>Liste des Produits</title>
 </head>
 <body>
-<div class="container mt-5">
+<div th:replace="template"></div>
+<div class="container">
     <div class="card">
         <div class="card-header">
             Liste des Produits
@@ -18,18 +21,33 @@
                 <tr>
                     <th>ID</th><th>Nom Produit</th><th>Prix</th>
                 </tr>
-                <tr th:each="p:${produits}">
+                <tr th:each="p:${produits.content}">
                     <td th:text="${p.idProduit}"></td>
                     <td th:text="${p.nomProduit}"></td>
                     <td th:text="${p.prixProduit}"></td>
+                    <td>
+                        <a class="btn btn-danger"
+                           th:href="@{/supprimerProduit(id=${p.idProduit}, page=${currentPage}, size=${size})}"
+                           onclick="return confirm('Êtes-vous sûr ?')">
+                            Supprimer
+                        </a>
+                    </td>
+
                 </tr>
-                <tr th:each="p:${produits.content}">
             </table>
+            <ul class="nav nav-pills">
+                <li th:each="page,status:${pages}">
+                    <a th:class="${status.index==currentPage?'btn btn-primary':'btn' }"
+                       th:href="@{ ListeProduits(page=${status.index}, size=${size} ) }"
+                       th:text="${status.index }"></a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
 </body>
 </html>
